1차 셋팅 완료, 컴파일 에러는 다해결